--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -26,6 +26,10 @@ body {
   margin-right: auto;
 }
 
+#viz1620580489577 {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*---------------------------------------
    TIPOGRAPHIE           
